--- a/include/header.html
+++ b/include/header.html
@@ -1,6 +1,6 @@
 <header class="container-fluid">
     <div class="row">
-        <div id="div-a" class="col-lg-3"">
+        <div id="div-a" class="col-lg-3""> <!--Bootstrap separe la page en colonne-->
             <a><img id ="logo" src="/assets/img/logo.png" alt="logo"></a>
             <div id="div-categories">
                 <ul class="nav navbar-nav">
@@ -14,9 +14,9 @@
                         </p>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
+                        <li><a href="#">Livres,BD</a></li>
+                        <li><a href="#">Jeux vidéos</a></li>
+                        <li><a href="#">Téléphonie</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="#">Separated link</a></li>
                         <li role="separator" class="divider"></li>
@@ -28,9 +28,10 @@
         </div>
         <div id="div-b" class="col-lg-6">
             <div class="input-group mb-3">
-                <input type="text" style="width:600px;" class="form-control" placeholder="rechercher..." aria-label="Recipient's username" aria-describedby="button-addon2">
+                <!--bar de recherche-->
+                <input type="text" style="width:600px;" class="form-control" placeholder="Que cherchez-vous ?" aria-label="Recipient's username" aria-describedby="button-addon2">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">
+                    <button class="btn btn-outline-secondary" type="submit" id="button-addon2">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
                             <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
@@ -45,7 +46,7 @@
                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M10 5a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm6 5c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
                 </svg>
-                <span>Connexion</span>
+                <span>Mon compte</span>
             </a>
             <a href="#" id="panier_lien" class="bg-success">
                 <!-- ICON DU PANIER -->
