--- a/assets/scss/accueil.scss
+++ b/assets/scss/accueil.scss
@@ -79,20 +79,26 @@ header
     #container{
         width: 50%;
         border: 1px solid darkgray;
-        padding: 5px;
 
         .input-container{
-            margin: 15px;
+            margin: 10px;
+            position: relative;
 
             svg{
+                position: absolute;
                 height: 30px;
-                width: 5%;
+                width: 30px;
+                top: 10px;
             }
             input{
                 height: 50px;
-                width: 93%;
+                width: 90%;
+                padding-left: 35px;
                 border-radius: 8px;
-                border: 1px solid rgba(128, 131, 107, 0.726);
+            }
+        }
+        #pwd-container {
+            #pwd-input{
             }
         }
 
@@ -102,7 +108,6 @@ header
             flex-wrap: wrap;
 
             #bt-ccompte{
-                
             }
         }
     }
