--- a/assets/scss/espaceClient.scss
+++ b/assets/scss/espaceClient.scss
@@ -1,8 +1,3 @@
-body{
-	margin: 0px;
-	padding: 0px;
-}
-
 nav {
 	ul{
 		margin: 0px;
@@ -10,26 +5,27 @@ nav {
 
 		li{
 			list-style-type: none;
-			padding: 10px;
 			margin: 0px;
-
 			a{
 				text-decoration: none;
 				color: rgba(177, 174, 174, 0.521);
 				svg{
-					color: darkgrey;
 					height: 50px;
 					width: 50px;
+					padding: 2px;
+					color: darkgrey;
 				}
+
 				p{
 					position: absolute;
 					width: 380px;
+					height: 50px;
 					display: inline-block;
 					margin-left: 50px;
 				}
 			}
 
-			&:hover{
+			&:hover,&:focus{
 				border-radius: 8px;
 				border: 1px solid rgba(128, 128, 128, 0.89);
 				color: rgb(27, 26, 26);
@@ -37,10 +33,6 @@ nav {
 					color: rgb(41, 39, 39);
 				}
 			}
-		}
-
-		.menu{
-			//display: none;
 		}
 	}
 }
